<resources>
    <string name="app_name">SecureChat</string>
    <string name="profile">Profile</string>
    <string name="Theme">Theme</string>
    <string name="Light">light</string>
    <string name="dark">Dark</string>
    <string name="switch_account">Switch Account</string>
    <string name="image_avatar">imageAvatar</string>
    <string name="upload_avatar">Upload Avatar</string>
    <string name="online_indicator">Online Indicator</string>
    <string name="auto_download">Auto Download</string>
</resources>