<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">


                <ImageView
                    android:id="@+id/imageViewAvatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/image_avatar"
                    android:src="@mipmap/ic_launcher_round"
                    android:layout_centerHorizontal="true" />




            </RelativeLayout>

            <TextView
                android:id="@+id/textViewUsernameDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?android:attr/textColorPrimary"
                tools:text="username_placeholder" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#DDDDDD" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Theme"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/radioLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Light" />

                <RadioButton
                    android:id="@+id/radioDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark" />
            </RadioGroup>



            <Button
                android:id="@+id/buttonSwitchAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_account"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>